--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" href="imagenes/LogoFinal.png"/>
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
